<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jwhh.notekeeper.ui.NoteActivity">

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_revert_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_next"
        android:visible="false"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="100"
        android:title="@string/action_send_as_mail"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="100"
        android:title="@string/action_set_reminder"
        app:showAsAction="never" />

</menu>
